# AgentProof

./: .gitignore  LICENSE  PROGRESS.md  Paper_Improvement_Plan.md  README.md  agentproof_improvement_plan.md  pyproject.toml
.github/workflows/: agentproof_check.yml
corpus/: README.md  sources.json
corpus/annotations/: defect_labels.json
corpus/comparisons/: email_triage.pml
corpus/curated/: adk_customer_onboarding.json  adk_document_processing.json  adk_incident_response.json  lg_code_assistant.json  lg_customer_support.json  lg_email_triage.json  lg_financial_advisor.json  lg_multi_agent_research.json
corpus/graphs/: adk_compliance_review.json  autogen_debate.json  autogen_investment_team.json  autogen_round_robin_brainstorm.json  autogen_software_team.json  crewai_content_pipeline.json  crewai_data_analysis.json  crewai_hiring_pipeline.json  crewai_marketing_campaign.json  lg_rag_pipeline.json
docs/: ACTION_SCHEMA.md  AI_DEVELOPMENT_GUIDELINES.md  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  ERROR_HANDLING.md  EXAMPLE_SPECS.md  FORMAL_MODEL.md  INTEGRATION_LANGGRAPH.md  INTEGRATION_OPENAI.md  LIMITATIONS.md  MULTI_AGENT_MODEL.md  PRD.md  ROADMAP.md  SECURITY_MODEL.md  SPEC_LANGUAGE.md  STATE_MODEL.md  TEST_STRATEGY.md  THREAT_MODEL.md  TOOL_WRAPPER_GUIDE.md  TRACE_MONITORING.md  VERIFICATION_ENGINE.md  VERIFICATION_REPORT_EXAMPLES.md  VERIFICATION_REPORT_FORMAT.md  VISION.md
examples/: README.md  adk_compliance_pipeline.py  adk_pipeline.py  autogen_change_control.py  autogen_debate.py  crewai_research_crew.py  full_verification.py  langgraph_customer_support.py  langgraph_incident_response.py
paper/: Makefile  appendix_proofs.tex  arxiv.sty  latexmkrc  main.tex  references.bib
scripts/: aggregate_realworld.py  ast_extractor.py  benchmark_scale.py  build_corpus.py  compute_cis.py  defect_results.json  defect_results_annotated.json  defect_study.py  evaluate_policies.py  extractor_accuracy.py  generate_comparison_table.py  generate_traces.py  mine_github_gh.py  monitor_pruning.py  plot_scaling.py  policy_evaluation_results.json  reproduce_all.sh  revision_analyses.py  risk_aware_gate.py  runtime_fidelity.py  scaling_results.json  scrape_workflows.py  wf_reframe.js  wf_run.js  wf_run_v2.js  wf_validate_triage.js
tests/: test_extract_adk.py  test_extract_autogen.py  test_extract_crewai.py  test_extract_langgraph.py  test_graph_model.py  test_monitor_extended.py  test_trace_generation.py  test_verify_structural.py  test_verify_temporal.py
(+1207 files in other folders)
