[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentproof"
version = "0.2.0"
description = "Static graph verification for LangGraph agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/NordicAgents/agentproof"

[tool.hatch.build.targets.wheel]
packages = ["src/agentproof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
