[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentproofx"
version = "0.3.0"
description = "Static graph verification for agent workflows — LangGraph, ADK, AutoGen, CrewAI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "industriAgents" },
]
keywords = ["agent", "verification", "safety", "langgraph", "static-analysis", "LTL"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
langgraph = ["langgraph>=0.2"]
adk = ["google-adk>=1.0"]
autogen = ["autogen-agentchat>=0.4", "autogen-ext[openai]>=0.4"]
crewai = ["crewai>=0.80"]
all-frameworks = [
    "langgraph>=0.2",
    "google-adk>=1.0",
    "autogen-agentchat>=0.4",
    "autogen-ext[openai]>=0.4",
    "crewai>=0.80",
]

[project.urls]
Repository = "https://github.com/NordicAgents/agentproof"

[tool.hatch.build.targets.wheel]
packages = ["src/agentproof"]

[tool.hatch.build.targets.sdist]
exclude = ["paper/", "corpus/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
